Fix text alignment when text < min-width in Safari 10, fixes #76 (#77)

--- a/src/button/index.css
+++ b/src/button/index.css
@@ -166,6 +166,9 @@ a.spectrum-ActionButton {
   justify-content: center;
   align-items: center;
 
+  /* @safari10 Workaround for https://bugs.webkit.org/show_bug.cgi?id=169700 */
+  width: 100%;
+
   &:empty {
     display: none;
   }
